--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -26,38 +26,7 @@
             </div>
     </div>
 
-    <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-             <div class="d-flex flex-column justify-content-around">
-                <p >Employees</p>
-                <p style="font-size:1.5rem;"><b><%=(!data.data[0]) ? 0 : data.data[0].totalEmployees%></b></p>
-             </div>
-             <div class="d-flex">
-                <p></p>
-                <p class="mt-auto p-2 bd-highlight">Totals</p>
-             </div>
-        </div>
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-             <div class="d-flex flex-column justify-content-around">
-                <p>Permanent</p>
-                <p style="font-size:1.5rem;"><b><%=(!data.data[0]) ? 0 : data.data[0].permanent%></b></p>
-             </div>
-             <div class="d-flex">
-                <p></p>
-                <p class="mt-auto p-2 bd-highlight">Totals</p>
-             </div>
-        </div>
-        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-            <div class="d-flex flex-column justify-content-around">
-               <p>Contractual/Job Orders</p>
-               <p style="font-size:1.5rem;"><b><%=(!data.data[0]) ? 0 :data.data[0].contractual%></b></p>
-            </div>
-            <div class="d-flex">
-               <p></p>
-               <p class="mt-auto p-2 bd-highlight">Totals</p>
-            </div>
-        </div>
-    </div>
+    
     <div class="d-flex filterContainer rounded-1 gap-3">
         <button id="btnAdd" type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal" onclick="modal('empAddNew')">Add new</button>
     </div>
@@ -79,11 +48,11 @@
             <tbody>
                 <% Object.values(data.result).forEach(user =>{%> 
                     <tr>
-                        <td><%=user.emp_code%></td>
+                        <td><%=user.id%></td>
                         <td><%=user.name%></td>
-                        <td><%=user.employeeProject%></td>
-                        <td><%=user.position%></td>
-                        <td><%=user.employeeType%></td>
+                        <td><%=user.employee_project%></td>
+                        <td><%=user.designation%></td>
+                        <td><%=user.employment_type%></td>
                         <td>
                             <a href="#"> View Details </a>
                         </td>
