--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -46,7 +46,7 @@
                 </tr>
             </thead>
             <tbody>
-                <% Object.values(data.result).forEach(user =>{%> 
+                <%Object.values(data.result).forEach(user=>{%>
                     <tr>
                         <td><%=user.id%></td>
                         <td><%=user.name%></td>
@@ -55,7 +55,7 @@
                         <td><%=user.employment_type%></td>
                         <td>
                             <a href="/admin/employees/view/<%=user._id%>" target="_blank">View Details</a>
-                            <a href="/admin/employees/view/<%=user._id%>" target="_blank">Edit</a>
+                            <a href="/admin/employees/edit/<%=user._id%>" target="_blank">Edit</a>
                         </td>
                     </tr>
                 <%}); %>
