--- a/views/travelPass.ejs
+++ b/views/travelPass.ejs
@@ -159,10 +159,10 @@
             if(!isNaN(id)){
                 const result = await fetch(`http://localhost:3000/admin/api/employees/${id}`)
                 const data = await result.json()
-                console.log(data)
+                console.log(data.result)
                 if(data){
                     idErr.textContent = data.err
-                    fNameInput.value = data.personal_information.name
+                    fNameInput.value = data.result.personal_information.name
                 }
                 if(data.err){
                     idErr.textContent = data.err
